User admin additions

--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -9,5 +9,9 @@
     %th What This Be?
 
   %tr
+    %td Users
+    %td= link_to "User Accounts", admin_user_accounts_path
+
+  %tr
     %td Meta Data
     %td= link_to "Manage Site Title's and Description by URL", admin_meta_datum_index_path
