--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -4,32 +4,33 @@
   header(:title, title)
   page_title title
 
-
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = render :partial => 'shared/user_notice', :locals => {:model_obj => resource}
 
-  %p
-    = f.label :email
-    %br/
-    = f.text_field :email
-  %p
-    = f.label :password
+  - [:first_name, :last_name, :email].each do |field|
+    .field
+      = f.label field
+      = f.text_field field
+
+  .field
+    = f.label :password, :class => :inline
     %i :: leave blank if you don't want to change it
-    %br/
     = f.password_field :password
-  %p
+
+  .field
     = f.label :password_confirmation
-    %br/
     = f.password_field :password_confirmation
-  %p
-    = f.label :current_password
+
+  .field
+    = f.label :current_password, :class => :inline
     %i :: we need your current password to confirm your changes
-    %br/
     = f.password_field :current_password
-  %p= f.submit "Update"
+  
+  %div.actions= f.submit "Update"
 
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
+-#
+  %h3 Cancel my account
+  %p
+    Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
 
-= link_to "Back", :back
+  = link_to "Back", :back
