--- a/app/views/layouts/application/_footer.haml
+++ b/app/views/layouts/application/_footer.haml
@@ -1,5 +1,5 @@
 %div#footer.yui3-g
-  %div#f_left.yui3-u-5-8
+  %div#f_left.yui3-u-2-3
     %h5 Call eHouseOffers.com today for a Free Cash Home Offer 866.384.9068
 
     %p
@@ -21,15 +21,25 @@
 
       - if user_signed_in?
         = link_to "Your Account", edit_user_registration_path
+
+        - if admin?
+          = render 'shared/delimeter'
+          = link_to "Admin Panel", admin_path
+
         = render 'shared/delimeter'
         = link_to "Sign out", destroy_user_session_path
+
+
+
       - else
         = link_to "Create Account", new_user_registration_path
         = render 'shared/delimeter'
         = link_to "Sign in", new_user_session_path
 
+        
 
-  %div#f_right.yui3-u-3-8
+
+  %div#f_right.yui3-u-1-3
     %div.clearfix.ie_stretch
       %div#follow_us
         = image_tag '/images/transparent.gif', :id => 'facebook', :class => 'app_sprite', :alt => 'Facebook'
