--- a/app/views/phone_numbers/index.html.haml
+++ b/app/views/phone_numbers/index.html.haml
@@ -1,7 +1,7 @@
 :ruby
   extra_css('scaffold')
 
-%h1 Listing phone_numbers
+%h1 Listing Phone Numbers
 
 %table
   %tr
@@ -26,3 +26,5 @@
 %br
 
 = link_to 'New Phone number', new_phone_number_path
+\|
+= link_to "Admin Panel", admin_path
