--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -303,6 +303,8 @@ ul.green span {
 .hidden { display : none; }
 .indent { margin-left : 20px; }
 .inline { display : inline !important; }
+.small  { font-size : .9em; }
+.normal { font-weight : normal; }
 
 .rArr { /* right arrow */
     background : url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;
