--- a/public/stylesheets/sass/thank_you.scss
+++ b/public/stylesheets/sass/thank_you.scss
@@ -1,4 +1,9 @@
+#discountsC {
+    margin-top : 20px;
+}
+
 #discountsC h1 {
+
     padding : 20px 0 50px 0;
     font-size : 2em;
     text-align : center;
