--- a/app/views/admin/meta_datum/edit.html.haml
+++ b/app/views/admin/meta_datum/edit.html.haml
@@ -5,7 +5,7 @@
 
 = render 'form'
 
-= link_to 'Show', @admin_meta_datum
+= link_to 'Cancel', @admin_meta_datum
 \|
 = link_to 'Meta Data Index', admin_meta_datum_index_path
 
