--- a/app/views/admin/meta_datum/show.html.haml
+++ b/app/views/admin/meta_datum/show.html.haml
@@ -1,11 +1,13 @@
 :ruby
   extra_css('scaffold')
 
-%h1 View Meta Datum
+%h1 View Meta Data
 
 .field
-  %label Relative Path
-  %div.disabled_form_field= link_to @admin_meta_datum.relative_path, @admin_meta_datum.relative_path
+  %label
+    Relative Path &nbsp;
+    %span.small= link_to 'go to page', @admin_meta_datum.relative_path
+  %div.disabled_form_field= @admin_meta_datum.relative_path
 
 .quarter_height.field
   %label Title
@@ -19,7 +21,7 @@
   %label Keywords
   %div.disabled_form_field.quarter_height= @admin_meta_datum.keywords
 
-%p
+.actions
   = link_to "Edit", edit_admin_meta_datum_path(@admin_meta_datum)
   \|
   = link_to 'Meta Data Index', admin_meta_datum_index_path
