--- a/app/views/shared/_social_contact.haml
+++ b/app/views/shared/_social_contact.haml
@@ -1,6 +1,6 @@
 %div.social_contactC.box
   %div.gutter
-    %h1.green Contact Us
+    %h1 Contact Us
     
     %div.yui3-g
       %div.iconC.yui3-u-1-4
