--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,278 +1,1 @@
-.formC_700 {
-  width: 700px; }
-
-h1, h2, h3 {
-  font-size: 1.4em;
-  font-weight: bold;
-  color: #75973e;
-  border-bottom: 1px solid #75973e;
-  margin-bottom: 20px;
-  line-height: 1.2em; }
-
-h2 {
-  font-size: 1.2em;
-  margin-bottom: 15px; }
-
-h3 {
-  font-size: 1em;
-  margin-bottom: 10px; }
-
-label {
-  color: #333333;
-  font-weight: bold; }
-
-i {
-  color: #676767; }
-
-/* FIELD elements */
-.field {
-  margin-bottom: 20px; }
-
-.field label {
-  display: block; }
-
-.field label[data-type="checkbox"] {
-  display: inline;
-  margin-left: 5px; }
-
-div.disabled_form_field,
-.field textarea,
-.field input[type="text"],
-.field input[type="password"] {
-  padding: 4px;
-  border: 1px solid #dadada;
-  color: #333;
-  width: 97%; }
-
-div.disabled_form_field {
-  background-color: #ececec; }
-
-/* Textarea Height manipulation */
-.field textarea {
-  height: 200px; }
-
-div.disabled_form_field.half_height,
-.half_height.field textarea {
-  height: 100px; }
-
-div.disabled_form_field.quarter_height,
-.quarter_height.field textarea {
-  height: 50px; }
-
-/* Actions container */
-.actions {
-  margin: 10px 0 0 0; }
-
-/* Table Stuff */
-table th {
-  font-weight: bold;
-  color: #333333; }
-
-/* misc */
-a[data-method='delete']:hover {
-  color: #a00;
-  text-decoration: none; }
-
-p {
-  margin-bottom: 20px; }
-
-p b {
-  display: block; }
-
-ul {
-  margin-left: 20px; }
-
-ul li {
-  list-style-type: none; }
-
-ul div {
-  line-height: 1em; }
-
-.create_link {
-  float: right;
-  font-size: 11px;
-  font-weight: normal; }
-
-th, td {
-  padding: 4px;
-  border-color: #999; }
-
-th {
-  font-weight: bold;
-  color: #123; }
-
-td {
-  color: #333; }
-
-input.valid, textarea.valid {
-  background-color: #daefc0;
-  border-color: #588238;
-  position: relative;
-  color: #588238 !important; }
-
-input.invalid, textarea.invalid {
-  background-color: #f6b5b1;
-  border-color: #bc2b25;
-  position: relative;
-  color: #a00 !important; }
-
-div.form_validation_icon {
-  background: url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;
-  position: absolute;
-  right: -17px;
-  /* 15px wide with 8px padding (4right, 4left) + border and this about centers it. ugh */
-  top: 20%;
-  height: 15px;
-  width: 15px;
-  z-index: 9; }
-
-div.form_validation_icon.valid {
-  background-position: -376px -323px; }
-
-div.form_validation_icon.invalid {
-  background-position: -359px -323px; }
-
-/* FIXME -- jquery.ketchup should not even be creating their container! */
-.ketchup-error-container {
-  display: none; }
-
-.formC_700 {
-  width: 700px; }
-
-h1, h2, h3 {
-  font-size: 1.4em;
-  font-weight: bold;
-  color: #75973e;
-  border-bottom: 1px solid #75973e;
-  margin-bottom: 20px;
-  line-height: 1.2em; }
-
-h2 {
-  font-size: 1.2em;
-  margin-bottom: 15px; }
-
-h3 {
-  font-size: 1em;
-  margin-bottom: 10px; }
-
-label {
-  color: #333333;
-  font-weight: bold; }
-
-i {
-  color: #676767; }
-
-/* FIELD elements */
-.field {
-  margin-bottom: 20px; }
-
-.field label {
-  display: block; }
-
-.field label[data-type="checkbox"] {
-  display: inline;
-  margin-left: 5px; }
-
-div.disabled_form_field,
-.field textarea,
-.field input[type="text"],
-.field input[type="password"] {
-  padding: 4px;
-  border: 1px solid #dadada;
-  color: #333;
-  width: 97%; }
-
-div.disabled_form_field {
-  background-color: #ececec; }
-
-/* Textarea Height manipulation */
-.field textarea {
-  height: 200px; }
-
-div.disabled_form_field.half_height,
-.half_height.field textarea {
-  height: 100px; }
-
-div.disabled_form_field.quarter_height,
-.quarter_height.field textarea {
-  height: 50px; }
-
-/* Actions container */
-.actions {
-  margin: 10px 0 0 0; }
-
-/* Table Stuff */
-table th {
-  font-weight: bold;
-  color: #333333; }
-
-/* misc */
-a[data-method='delete']:hover {
-  color: #a00;
-  text-decoration: none; }
-
-#qaC textarea,
-#qaC input[type="text"] {
-  border: 1px solid #dadada;
-  color: #333333;
-  width: 97%; }
-
-#qaC textarea {
-  height: 5em;
-  overflow: hidden; }
-
-div#add_new_qaC a,
-#qaC a {
-  font-size: 12px; }
-
-div#add_new_qaC,
-#qaC div.qa_deleteC {
-  padding: 5px 10px;
-  float: right; }
-
-table.edit_qa_collection {
-  width: 100%;
-  margin-bottom: 0px; }
-
-table.edit_qa_collection td, table.edit_qa_collection th {
-  border: none; }
-
-table.edit_qa_collection tr.spacer {
-  height: 20px; }
-
-table.edit_qa_collection tr.grey_bg {
-  background-color: #ececec; }
-
-table.edit_qa_collection td.label {
-  color: #333333;
-  font-weight: bold;
-  vertical-align: top;
-  line-height: 2em;
-  text-align: right;
-  padding: 0 8px; }
-
-table.edit_qa_collection td.input {
-  width: 97%; }
-
-/* weak attempt -- for spotlight edit */
-table.fullw {
-  width: 97%; }
-
-table {
-  width: 700px; }
-
-.indent table {
-  width: 690px; }
-
-table input {
-  width: 100% !important;
-  padding: 4px 0 4px 1px !important; }
-
-table th, table td {
-  vertical-align: top; }
-
-table.no_border td, table.no_border th {
-  border: none; }
-
-table th.center, table td.center {
-  text-align: center; }
+.formC_700{width:700px}h1,h2,h3{font-size:1.4em;font-weight:bold;color:#75973e;border-bottom:1px solid #75973e;margin-bottom:20px;line-height:1.2em}h2{font-size:1.2em;margin-bottom:15px}h3{font-size:1em;margin-bottom:10px}label{color:#333333;font-weight:bold}i{color:#676767}.field{margin-bottom:20px}.field label{display:block}.field label[data-type="checkbox"]{display:inline;margin-left:5px}div.disabled_form_field,.field textarea,.field input[type="text"],.field input[type="password"]{padding:4px;border:1px solid #dadada;color:#333;width:97%}div.disabled_form_field{background-color:#ececec}.field textarea{height:200px}div.disabled_form_field.half_height,.half_height.field textarea{height:100px}div.disabled_form_field.quarter_height,.quarter_height.field textarea{height:50px}.actions{margin:10px 0 0 0}table th{font-weight:bold;color:#333333}a[data-method='delete']:hover{color:#a00;text-decoration:none}p{margin-bottom:20px}p b{display:block}ul{margin-left:20px}ul li{list-style-type:none}ul div{line-height:1em}.create_link{float:right;font-size:11px;font-weight:normal}th,td{padding:4px;border-color:#999}th{font-weight:bold;color:#123}td{color:#333}input.valid,textarea.valid{background-color:#daefc0;border-color:#588238 !important;position:relative;color:#588238 !important}input.invalid,textarea.invalid{background-color:#f6b5b1;border-color:#bc2b25 !important;position:relative;color:#a00 !important}div.form_validation_icon{background:url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;position:absolute;right:-17px;top:20%;height:15px;width:15px;z-index:9}div.form_validation_icon.valid{background-position:-376px -323px}div.form_validation_icon.invalid{background-position:-359px -323px}.ketchup-error-container{display:none}.formC_700{width:700px}h1,h2,h3{font-size:1.4em;font-weight:bold;color:#75973e;border-bottom:1px solid #75973e;margin-bottom:20px;line-height:1.2em}h2{font-size:1.2em;margin-bottom:15px}h3{font-size:1em;margin-bottom:10px}label{color:#333333;font-weight:bold}i{color:#676767}.field{margin-bottom:20px}.field label{display:block}.field label[data-type="checkbox"]{display:inline;margin-left:5px}div.disabled_form_field,.field textarea,.field input[type="text"],.field input[type="password"]{padding:4px;border:1px solid #dadada;color:#333;width:97%}div.disabled_form_field{background-color:#ececec}.field textarea{height:200px}div.disabled_form_field.half_height,.half_height.field textarea{height:100px}div.disabled_form_field.quarter_height,.quarter_height.field textarea{height:50px}.actions{margin:10px 0 0 0}table th{font-weight:bold;color:#333333}a[data-method='delete']:hover{color:#a00;text-decoration:none}#qaC textarea,#qaC input[type="text"]{border:1px solid #dadada;color:#333333;width:97%}#qaC textarea{height:5em;overflow:hidden}div#add_new_qaC a,#qaC a{font-size:12px}div#add_new_qaC,#qaC div.qa_deleteC{padding:5px 10px;float:right}table.edit_qa_collection{width:100%;margin-bottom:0px}table.edit_qa_collection td,table.edit_qa_collection th{border:none}table.edit_qa_collection tr.spacer{height:20px}table.edit_qa_collection tr.grey_bg{background-color:#ececec}table.edit_qa_collection td.label{color:#333333;font-weight:bold;vertical-align:top;line-height:2em;text-align:right;padding:0 8px}table.edit_qa_collection td.input{width:97%}table.fullw{width:97%}table{width:700px}.indent table{width:690px}table input{width:100% !important;padding:4px 0 4px 1px !important}table th,table td{vertical-align:top}table.no_border td,table.no_border th{border:none}table th.center,table td.center{text-align:center}
