--- a/public/stylesheets/sass/_breadcrumb.scss
+++ b/public/stylesheets/sass/_breadcrumb.scss
@@ -1,13 +1,15 @@
+@import "helpers";
+
 ul.breadcrumbC {
     font-size : .75em;
     margin : 0 0 1em 0;
     padding : 0;
-    color : #53aa47;
+    color : $breadcrumb_green;
     height : 2em;
     overflow : hidden;
 }
 ul.breadcrumbC a {
-    color : #53aa47;
+    color : $breadcrumb_green;
 }
 ul.breadcrumbC li {
     list-style : none;
@@ -20,8 +22,6 @@ ul.breadcrumbC li#crumb_home {
 }
 /* (bigger) right arrow specifically for the home page breadcrumb. All the others use .rArr*/
 li#crumb_home .rArr { 
-    background : url(/images/sprites/application.png) repeat-x scroll -343px -324px transparent;
-    height : 14px;
-    width  : 14px;
+    @include sprite('application', -343, -324, 14, 14);
     vertical-align : middle;
 }
