Modified some sprite stuff to use the sprite() sass helper

--- a/app/views/seller_listings/_form.html.haml
+++ b/app/views/seller_listings/_form.html.haml
@@ -49,12 +49,12 @@
   .submitC
     = image_submit_tag '/images/transparent.gif', :id => 'get_cash_offer_btn', :class => 'sprite'
     #securityC
-      = image_tag '/images/transparent.gif', :id => 'lock_icon', :class => 'sprite', :alt => 'Secure!'
+      = image_tag '/images/transparent.gif', :id => 'lock_icon', :alt => 'Secure!'
       %span security guaranteed
     #security_iconsC
-      = image_tag '/images/transparent.gif', :id => 'mcafee', :class => 'sprite', :alt => 'McAfee'
-      = image_tag '/images/transparent.gif', :id => 'truste', :class => 'sprite', :alt => 'Truste Certified Privacy'
-      = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'sprite last', :alt => 'Verisign'
+      = image_tag '/images/transparent.gif', :id => 'mcafee', :alt => 'McAfee'
+      = image_tag '/images/transparent.gif', :id => 'truste', :alt => 'Truste Certified Privacy'
+      = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'last', :alt => 'Verisign'
 
 :javascript
   jQuery.placefinder_by_zip_path = "#{placefinder_by_zip_path}";
