--- a/app/views/seller_listings/new.html.haml
+++ b/app/views/seller_listings/new.html.haml
@@ -4,7 +4,7 @@
 %div#step_one_contentC
   %div.box
     %div.gutter.clearfix
-      = image_tag '/images/transparent.gif', :id => 'step_one_register', :class => 'sprite', :alt => 'Step 1: Register'
+      = image_tag '/images/transparent.gif', :id => 'step_one_register', :alt => 'Step 1: Register'
 
       %div#form_gutter
         = render :partial => 'seller_listings/form'
