--- a/app/views/seller_listings/_comp_data.haml
+++ b/app/views/seller_listings/_comp_data.haml
@@ -64,13 +64,13 @@
         = f.radio_button :payments_are_current, :na, {:checked => @seller_listing.payments_are_current.nil?}
 
   .submitC
-    = image_submit_tag '/images/transparent.gif', :id => 'make_offer', :class => 'sprite'
+    = image_submit_tag '/images/transparent.gif', :id => 'make_offer'
 
     #securityC
-      = image_tag '/images/transparent.gif', :id => 'lock_icon', :class => 'sprite', :alt => 'Secure!'
+      = image_tag '/images/transparent.gif', :id => 'lock_icon', :alt => 'Secure!'
     #security_iconsC
-      = image_tag '/images/transparent.gif', :id => 'mcafee', :class => 'sprite', :alt => 'McAfee'
-      = image_tag '/images/transparent.gif', :id => 'truste', :class => 'sprite', :alt => 'Truste Certified Privacy'
-      = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'sprite last', :alt => 'Verisign'
+      = image_tag '/images/transparent.gif', :id => 'mcafee', :alt => 'McAfee'
+      = image_tag '/images/transparent.gif', :id => 'truste', :alt => 'Truste Certified Privacy'
+      = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'last', :alt => 'Verisign'
 
 
