--- a/public/stylesheets/sass/new_seller_listing.scss
+++ b/public/stylesheets/sass/new_seller_listing.scss
@@ -2,41 +2,29 @@
 @import "form_validations";
 
 /* Start Sprites */
-.sprite { background : url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent; }
+/*.sprite { background : url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent; }*/
 #step_one_register  {
-    background-position : -166px -32px;
-    height : 75px;
-    width  : 190px;
+    @include sprite('seller-register-step1', -166, -32, 75, 190);
 }
 #lock_icon  {
-    background-position : -359px -56px;
-    height : 25px;
-    width  : 85px;
+    @include sprite('seller-register-step1', -360, -57, 25, 85);
     vertical-align : middle;
     margin-left : 7px;
 }
 #truste {
-    background-position : 0px -125px;
-    height : 28px;
-    width : 101px;
+    @include sprite('seller-register-step1', 0, -125, 28, 101);
     margin : 0 0 0 20px;
 }
 #verisign {
-    background-position : -103px -125px;
-    height : 26px;
-    width : 61px;
+    @include sprite('seller-register-step1', -103, -125, 26, 61);
     margin : 0 0 0 7px;
 }
 #mcafee {
-    background-position : -360px -32px;
-    height : 22px;
-    width : 62px;
+    @include sprite('seller-register-step1', -360, -32, 22, 62);
     margin : 0 0 0 4px;
 }
 form input[type="image"] {
-    background-position : -166px -108px;
-    height : 48px;
-    width  : 224px;
+    @include sprite('seller-register-step1', -166, -108, 48, 224);
 }
 /* end sprites */
 
