--- a/app/views/shared/_seller_signup.haml
+++ b/app/views/shared/_seller_signup.haml
@@ -3,7 +3,7 @@
     = image_tag '/images/get_a_cash_offer_on_your_house_today.png', :alt => 'Get a cash offer on your house today!'
 
     %p
-      Connect with a home buyer in 3 easy steps!
+      Find a home buyer in 3 easy steps!
 
     %strong
       Sell Your House Today!
